--- a/_includes/big-cat.html
+++ b/_includes/big-cat.html
@@ -3,5 +3,9 @@
     https://commons.wikimedia.org/wiki/File:Siberischer_tiger_de_edit02.jpg 
 {% endcomment %}
 <img style="display:block; margin: 10px auto;" 
-    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Siberischer_tiger_de_edit02.jpg/640px-Siberischer_tiger_de_edit02.jpg" 
+    src="https://upload.wikimedia.org/wikipedia/commons/7/71/Sibirischer_tiger_de_edit02.jpg" 
     alt="face of a big tiger" >
+
+
+<!-- https://upload.wikimedia.org/wikipedia/commons/7/71/Sibirischer_tiger_de_edit02.jpg -->
+<!-- https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Siberischer_tiger_de_edit02.jpg/640px-Siberischer_tiger_de_edit02.jpg -->
